2008-09-03  Dafydd Crosby <dcrosby@userful.com>
	* added following printers:
	  printer/Canon-LBP-3460.xml
	  printer/Canon-LBP-5360.xml
	  printer/Canon-LBP-5960.xml
	  printer/Canon-LBP-5970.xml
	  printer/Canon-LBP-5975.xml
	  printer/Canon-imageRunner_1023.xml
	  printer/Canon-imageRunner_1023N.xml
	  printer/Canon-imageRunner_1023iF.xml
	  printer/Canon-imageRunner_2016.xml
	  printer/Canon-imageRunner_2016i.xml
	  printer/Canon-imageRunner_2018.xml
	  printer/Canon-imageRunner_2020.xml
	  printer/Canon-imageRunner_2020i.xml
	  printer/Canon-imageRunner_2022.xml
	  printer/Canon-imageRunner_2230.xml
	  printer/Canon-imageRunner_2270.xml
	  printer/Canon-imageRunner_3025.xml
	  printer/Canon-imageRunner_3225.xml
	  printer/Canon-imageRunner_7086.xml
	  printer/Canon-imageRunner_7095.xml
	  printer/Canon-imageRunner_7105.xml
	  printer/Canon-imageRunner_8070.xml
	  printer/Canon-imageRunner_C2550.xml
	  printer/Canon-imageRunner_C3200.xml
	  printer/Canon-imageRunner_C5058.xml
	  printer/Canon-imageRunner_C5068.xml
	  printer/Canon-imageRunner_C5180.xml
	  printer/Canon-imageRunner_C5185.xml
	  printer/Canon-imageRunner_C5185i.xml

2008-09-03  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/HP-Color_LaserJet_3500.xml,
	  printer/HP-Color_LaserJet_3550.xml,
	  printer/HP-Color_LaserJet_3600.xml: Switched default driver to
	  "hpijs" as "pxljr" has bugs in normal and draft print quality and
	  also does not print duplex (Ubuntu bug #228635).

2008-09-03  George Liu <george.liu@ricoh-tech.com>

	* PPD/: Fixed UIConstraints bug in 30 Ricoh Family PS PPD files. 

2008-09-03  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/Postscript.xml, opt/161.xml, opt/162.xml, opt/2.xml,
	  opt/6.xml, opt/Postscript-Resolution.xml,
	  opt/largeformat-PageSize.xml,
	  printer/Generic-PostScript_Printer.xml, driver/Postscript1.xml,
	  opt/Postscript-Duplex.xml opt/Postscript-InputSlot.xml,
	  opt/Postscript-PageSize.xml,
	  opt/Postscript-largeformat-PageSize.xml,