@@ -6,14 +6,14 @@
       <laser/>
       <resolution>
          <dpi>
-            <!--x unknown-->
-            <!--y unknown-->
+            <x>1200</x>
+            <y>1200</y>
          </dpi>
       <consumables>
       </consumables>
       </resolution>
    </mechanism>
-   <url></url>
+   <url>http://www.canon-europe.com/For_Work/Products/Office_Print_Copy_Solutions/Office_Black_White/iR2018/index.asp</url>
    <lang>
       <pcl level="6"/>
       <!--no pjl-->
@@ -29,6 +29,21 @@
    <comments>
       <en>
       PCL 6 is optional
+
+Additional PDL: UFRII LT (<a href="http://de.software.canon-europe.com/software/0023676.asp?model=">UFRII/UFRII LT Printer Driver for Linux</a> according to a topic about iR2016 in forum <i>Printers from Canon</i>)<p>
+
+Setup (upon <i>guide-ufr2-1.3x.tar.gz</i> obtained from the link above):
+<pre>
+install cndrvcups-common-1.30-1.i386.rpm cndrvcups-ufr2-1.30-1.i386.rpm
+restart cups
+lpadmin -p ir2018 -m CNCUPSIR2016ZK.ppd -v socket://canon_ip_address:9100 -E
+(Debian specific: rpms can be converted to debs by alien, however, the ppd file should be linked in /usr/share/ppd:
+ln -s ../cups/model/CNCUPSIR2016ZK.ppd /usr/share/ppd/ )
+</pre>
+
+CNCUPSIR2016ZK means that the ppd for iR2016 works me also for iR2018!
+
+http://de.software.canon-europe.com/software/0023676.asp?model=
       
       Foomatic entry made by PPDtoXML T/G 0.19 on 2008-09-03
       </en>
