@@ -6,14 +6,14 @@
       <laser/>
       <resolution>
          <dpi>
-            <!--x unknown-->
-            <!--y unknown-->
+            <x>1200</x>
+            <y>600</y>
          </dpi>
-      <consumables>
+      <consumables>toner
       </consumables>
       </resolution>
    </mechanism>
-   <url></url>
+   <url>http://www.canon-europe.com/for_work/products/office_print_copy_solutions/digital_ir_series/ir2020i/index.asp</url>
    <lang>
       <pcl level="6"/>
       <!--no pjl-->
@@ -26,9 +26,15 @@
        <id>pxlmono</id>
      </driver>
    </drivers>
+   <autodetect>
+     <snmp>
+       <description>Canon iR2270</description>
+     </snmp>
+   </autodetect>
    <comments>
       <en>
       Foomatic entry made by PPDtoXML T/G 0.19 on 2008-09-03
+      Additional PDL: UFRII LT
       </en>
    </comments>
 </printer>
