@@ -13,7 +13,7 @@
       </consumables>
       </resolution>
    </mechanism>
-   <url></url>
+   <url>http://www.canon.de/For_Work/Products/Office_Print_Copy_Solutions/Colour_Printing_Series/iRC3200/index.asp</url>
    <lang>
       <postscript level="3">
       </postscript>
@@ -26,6 +26,9 @@
    <drivers>
      <driver>
        <id>cljet5</id>
+     </driver>
+     <driver>
+       <id>Postscript</id>
      </driver>
    </drivers>
    <comments>
