@@ -1,3 +1,9 @@
+2008-09-05  Dafydd Crosby <dcrosby@userful.com>
+	* printer/Canon-imageRunner_2016.xml,
+          printer/Canon-imageRunner_2020i.xml,
+          printer/Canon-imageRunner_C3200.xml:
+	  updated information
+
 2008-09-03  Dafydd Crosby <dcrosby@userful.com>
 	* added following printers:
 	  printer/Canon-LBP-3460.xml
